... fucking IE. Painfully fix right aligned expand symbols in partition diagram, for non-more_than_fair_space cases.

--- a/src/charts/d3.scss
+++ b/src/charts/d3.scss
@@ -246,7 +246,7 @@ a.boxclose {
   color: red;
 }
 
-.partition-right-ie-fix.fat{
+.partition-right-ie-fix{
   height: 100%;
 }
 
